changed position of dropdown menu to use vh instead of rem to be responsive to navbar size and avoid gaps

--- a/assets/css/_navbar.css
+++ b/assets/css/_navbar.css
@@ -172,7 +172,7 @@ li {
   display: none;
   z-index: 200;
   position: fixed;
-  top: 12.5rem;
+  top: 10vh;
   left: 0;
   width: 100%;
   height: 28rem;
