--- a/assets/css/_spacer.css
+++ b/assets/css/_spacer.css
@@ -1,3 +1,3 @@
 .spacer {
-  height: 5rem;
+  height: 3rem;
 }
